confir changes in angular an java page

--- a/dotnet.html
+++ b/dotnet.html
@@ -137,10 +137,11 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
     <div class="widget-area">
-        
+
         <div class="container mt-5 px-3">
             <div class="gx-5 training-features">
                 <h5 class="text-theme">Training Features </h5>
