--- a/index.html
+++ b/index.html
@@ -525,7 +525,8 @@
                             <div class="swiper-slide">
                                 <div class="service-3d">
                                     <div class="service-3d_icon">
-                                        <img src="assets/img/icon/dotnet.png" alt="Icon" style="height: 90px !important;">
+                                        <img src="assets/img/icon/dotnet.png" alt="Icon"
+                                            style="height: 90px !important;">
                                     </div>
                                     <div class="service-3d_content">
                                         <h3 class="box-title">
@@ -545,13 +546,18 @@
                             <div class="swiper-slide">
                                 <div class="service-3d">
                                     <div class="service-3d_icon">
-                                        <img src="assets/img/icon/fullstack.png" alt="Icon" style="height: 90px !important;">
+                                        <img src="assets/img/icon/fullstack.png" alt="Icon"
+                                            style="height: 90px !important;">
                                     </div>
                                     <div class="service-3d_content">
                                         <h3 class="box-title">
                                             <a href="fullstack.html">Full Stack Development</a>
                                         </h3>
-                                        <p class="service-3d_text">Full stack development is the process of developing both the frontend and backend of applications. Any application has a frontend (user-facing) component and a backend (database and logic) component. The frontend contains the user interface and code related to user interactions with the application.<br /></p>
+                                        <p class="service-3d_text">Full stack development is the process of developing
+                                            both the frontend and backend of applications. Any application has a
+                                            frontend (user-facing) component and a backend (database and logic)
+                                            component. The frontend contains the user interface and code related to user
+                                            interactions with the application.<br /></p>
                                         <a href="fullstack.html" class="th-btn">
                                             Read More<i class="fas fa-arrow-right ms-2"></i>
                                         </a>
@@ -693,7 +699,7 @@
                                 <p class="about-text">We are passionate about shaping the next generation of tech
                                     talent. In Achievers Tech our Trained software trainers provide real-world expertise
                                     and industry insights to our training and placement programs</p>
-                                <div class="th-social"><a href="#"><i class="fab fa-facebook-f"></i></a>  <a><i
+                                <div class="th-social"><a href="#"><i class="fab fa-facebook-f"></i></a> <a><i
                                             class="fab fa-whatsapp"></i></a> <a href="#"><i
                                             class="fab fa-youtube"></i></a></div>
                             </div>
