--- a/upcomming-batches.html
+++ b/upcomming-batches.html
@@ -137,6 +137,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
     <!-- Latest Cource Section Start -->
@@ -309,8 +310,8 @@
 
                                         </ol>
                                         <div class="widget-49-meeting-action">
-                                            <a href="fullstack.html"
-                                                class="btn btn-sm btn-flash-border-primary">View Details</a>
+                                            <a href="fullstack.html" class="btn btn-sm btn-flash-border-primary">View
+                                                Details</a>
                                         </div>
                                     </div>
                                 </div>
@@ -337,7 +338,7 @@
                                 <p class="about-text">We are passionate about shaping the next generation of tech
                                     talent. In Achievers Tech our Trained software trainers provide real-world expertise
                                     and industry insights to our training and placement programs</p>
-                                <div class="th-social"><a href="#"><i class="fab fa-facebook-f"></i></a>  <a><i
+                                <div class="th-social"><a href="#"><i class="fab fa-facebook-f"></i></a> <a><i
                                             class="fab fa-whatsapp"></i></a> <a href="#"><i
                                             class="fab fa-youtube"></i></a></div>
                             </div>
