--- a/software-testing.html
+++ b/software-testing.html
@@ -269,7 +269,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mt-2 px-2">
                     <div class="container mt5 px-3">
                         <h5 class="">Course Curriculum - Automation Testing
                         </h5>
