--- a/angular.html
+++ b/angular.html
@@ -68,6 +68,7 @@
                         <div class="header-social">
                             <span class="social-title">Follow Us On : </span>
                             <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.whatsapp.com/"><i class="fab fa-whatsapp"></i></a>
                             <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
                             <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
                         </div>
@@ -274,7 +275,7 @@
                                     and industry insights to our training and placement programs</p>
                                 <div class="th-social"><a href="#"><i class="fab fa-facebook-f"></i></a> <a><i
                                             class="fab fa-whatsapp"></i></a> <a href="#"><i
-                                            class="fab fa-youtube"></i></a></div>
+                                            class="fab fa-youtube"></i></a><a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a></div>
                             </div>
                         </div>
                     </div>
