--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <!-- Intro Section Start -->
     <div class="th-hero-wrapper" style="height: 725px; padding-top: -85px; margin-top: -85px;">
         <div class="hero-inner">
-            <div class="th-hero-bg background-image" style="background-image: url(assets/img/hero/hero_img_5_1.png);">
+            <div class="th-hero-bg background-image" style="background-image: url(images/banner_intro.jpg);">
             </div>
             <div class="container th-container5">
                 <div class="hero-style5"><span class="sub-title style1 text-white">We’re Leading Software Training
