--- a/fullstack.html
+++ b/fullstack.html
@@ -142,8 +142,213 @@
     </section>
 
     <div class="widget-area">
-
         <div class="container mt-5 px-3">
+            <div class="px-3">
+                <h5 class="">Course Curriculum
+                </h5>
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse-0" aria-expanded="false" aria-controls="collapseOne">HTML
+                                &amp; CSS</button>
+                        </h2>
+                        <div id="collapse-0" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <ul>
+                                    <li>Introduction to HTML, Document Structure, Headings (h1 to h6)</li>
+                                    <li>Paragraphs,Tags vs Elements, Text Formatting, Lists (ul, ol, li)</li>
+                                    <li>comments, Links (anchor tags), Images (img tags), Block vs Inline</li>
+                                    <li>Semantic Elements, Tables,symbols, miscellenous</li>
+                                    <li>Forms(Ui Elements and their attributes)</li>
+                                    <li>forms Validation</li>
+                                    <li>media inserting tags(video,audio,picture, iframe,embed etc..,)</li>
+                                    <li>CSS Basics - Selectors, Colors, Fonts</li>
+                                    <li>Box Model (margin, padding, border), Display Property </li>
+                                    <li>pseudo selectors,pseudo classes </li>
+                                    <li>Positioning,floats,clearfix</li>
+                                    <li>FlexBox</li>
+                                    <li>Grid</li>
+                                    <li>Translate and Transitions and units(vw,vh,em,rem,%,px)</li>
+                                    <li>animations and Responsive Basics</li>
+                                    <li>media Queries</li>
+                                    <li>miscellaneous(Filters, Blendering mode, designs, custom variables)</li>
+                                    <li>Project 1(using HTML CSS)</li>
+                                    <li>Project 2(Using HTML CSS)</li>
+                                    <li>SASS Introduction(vaiables,Nesting,mixin,partials)</li>
+                                    <li>SASS (control directives,extend,sample usage)</li>
+                                    <li>Project 3(using HTML CSs)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse-1" aria-expanded="false"
+                                aria-controls="collapseOne">Bootstrap</button>
+                        </h2>
+                        <div id="collapse-1" class="accordion-collapse collapse  " aria-labelledby="headingOne"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <ul>
+                                    <li>Introduction to Bootstrap, Libraries, Grid System</li>
+                                    <li>Bootstrap Typography, Colors, Images</li>
+                                    <li>Bootstrap Components (Navbar, Cards, Forms)</li>
+                                </ul>
+                             </div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse-2" aria-expanded="false"
+                                aria-controls="collapseOne">JavaScript</button>
+                        </h2>
+                        <div id="collapse-2" class="accordion-collapse collapse  " aria-labelledby="headingOne"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <ul>
+                                    <li>Introduction to JavaScript, Variables</li>
+                                    <li>Data types and its Methods-1</li>
+                                    <li>Data types and its Methods-2</li>
+                                    <li>Operators in JS</li>
+                                    <li>Control Statements (if and switch)</li>
+                                    <li>loops(while,do-while,for)</li>
+                                    <li>variations of for(for,for..in,for..of,forEach)</li>
+                                    <li>forEach,map,filter,reduce</li>
+                                    <li>Function( declaration,invokation,parameters and arguments)</li>
+                                    <li>Scope,closure,callbacks</li>
+                                    <li>DOM Intro, Selection, modifying content</li>
+                                    <li>Handling events(event handlers,listeners)</li>
+                                    <li>Events(event propagation and delegation)</li>
+                                    <li>creating and deleting elements</li>
+                                    <li>Forms in JS</li>
+                                    <li>Asynchronous JS,Callback Hell</li>
+                                    <li>Promises</li>
+                                    <li>HTTP Requests and Fetch API</li>
+                                    <li>Async/Await</li>
+                                    <li>Practice projects for DOM and API</li>
+                                    <li>ES6 Features(Arrow Functions, Template Literals)</li>
+                                    <li>Destructuring</li>
+                                    <li>Classes -1</li>
+                                    <li>Classes-2(include this,bind,apply,call)</li>
+                                    <li>Modules-1</li>
+                                    <li>Modules-2 and Prototypes and its chaining</li>
+                                    <li>BOM(introduction and basics)</li>
+                                    <li>Local Storage and Session Storage</li>
+                                    <li>cookies</li>
+                                    <li>HTML5(Canvas,svg,GeoLocation)</li>
+                                    <li>AJAX(Asynchronous requests,XHR,JSON,CORS)</li>
+                                    <li>JQUERY-1</li>
+                                    <li>JQUERY-2</li>
+                                    <li>PROJECT(Complete)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse-3" aria-expanded="false"
+                                aria-controls="collapseOne">React</button>
+                        </h2>
+                        <div id="collapse-3" class="accordion-collapse collapse  " aria-labelledby="headingOne"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <ul>
+                                    <li>Getting Started with React</li>
+                                    <li>Components and JSX</li>
+                                    <li>State, Props, and Event Handling</li>
+                                    <li>Advanced React Components</li>
+                                    <li>Styling in React</li>
+                                    <li>Debugging and Error Handling</li>
+                                    <li>Introduction to Hooks</li>
+                                    <li>Higher Order Components and Context API</li>
+                                    <li>HTTP Requests and Forms in React</li>
+                                    <li>React Router and Forms</li>
+                                    <li>Form Handling and Validation</li>
+                                    <li>State Management with Redux</li>
+                                    <li>Material UI and Common Errors</li>
+                                    <li>Advanced React Features</li>
+                                    <li>Unit Testing and Webpack</li>
+                                    <li>Server-Side Rendering and Deployment</li>
+                                    <li>Hands-On</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse-4" aria-expanded="false"
+                                aria-controls="collapseOne">Back-End</button>
+                        </h2>
+                        <div id="collapse-4" class="accordion-collapse collapse  " aria-labelledby="headingOne"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <ul>
+                                    <li>Introduction to Server-Side Scripting and NPM</li>
+                                    <li>Node.js Features, Drawbacks, and Environment Setup</li>
+                                    <li>Node.js Program Architecture and Nodemailer</li>
+                                    <li>Node.js Core Concepts</li>
+                                    <li>Node.js File System and Asynchronous Operations</li>
+                                    <li>Express.js</li>
+                                    <li>Advanced Express.js</li>
+                                    <li>MongoDB and Database Connectivity</li>
+                                    <li>Hands-On</li>
+                                    <li>Authentication and Security</li>
+                                    <li>Security Practices and Error Handling</li>
+                                    <li>Testing and Deployment</li>
+                                    <li>WebSockets, GraphQL, and Middleware</li>
+                                    <li>Caching</li>
+                                    <li>Streams</li>
+                                    <li>Microservices</li>
+                                    <li>Docker</li>
+                                    <li>Kubernetes</li>
+                                    <li>Hands-On</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse-5" aria-expanded="false"
+                                aria-controls="collapseOne">MySQL</button>
+                        </h2>
+                        <div id="collapse-5" class="accordion-collapse collapse  " aria-labelledby="headingOne"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <ul>
+                                    <li>Introduction</li>
+                                    <li>Keys</li>
+                                    <li>Constraints</li>
+                                    <li>CRUD Operations</li>
+                                    <li>SQL Languages</li>
+                                    <li>SQL Commands</li>
+                                    <li>SQL Clause</li>
+                                    <li>Operators</li>
+                                    <li>Wild Cards</li>
+                                    <li>Aggregate Functions</li>
+                                    <li>SQL Joins</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center mt-5">
+
+                    <br/><br/><br/>
+
+                </div>
+            </div>
             <div class="gx-5 training-features">
                 <h5 class="text-theme">Training Features </h5>
                 <div class="row">
@@ -245,7 +450,8 @@
                                     and industry insights to our training and placement programs</p>
                                 <div class="th-social"><a href="#"><i class="fab fa-facebook-f"></i></a> <a><i
                                             class="fab fa-whatsapp"></i></a> <a href="#"><i
-                                            class="fab fa-youtube"></i></a><a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a></div>
+                                            class="fab fa-youtube"></i></a><a href="https://www.instagram.com/"><i
+                                            class="fab fa-instagram"></i></a></div>
                             </div>
                         </div>
                     </div>
