--- a/angular.html
+++ b/angular.html
@@ -57,7 +57,7 @@
                     <div class="col-auto d-none d-lg-block">
                         <div class="header-links">
                             <ul>
-                                <li><i class="fas fa-phone"></i><a href="tel:+918484039108">+91-8484039108</a></li>
+                                <li><i class="fas fa-phone"></i><a href="tel:+918484039108">+91-8484039108</a> | <a href="tel:+918484049108">+91-8484049108</a></li>
                                 <li><i class="fas fa-envelope"></i>
                                     <ahref="mailto:info@achievertech.co.in">info@achievertech.co.in</a>
                                 </li>
@@ -133,7 +133,7 @@
                             <div class="icon-masking me-2"><span class="mask-icon bg-mask"
                                     style="mask-image: url(&quot;assets/img/theme-img/title_shape_2.svg&quot;);"></span>
                                 <img src="assets/img/theme-img/title_shape_2.svg" alt="shape">
-                            </div> WEB DEVELOEPMENT
+                            </div> ANGULAR DEVELOEPMENT
                         </span>
                     </div>
                 </div>
