--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
     <!-- Header Section End -->
 
     <!-- Intro Section Start -->
-    <div class="th-hero-wrapper" style="height: 725px; padding-top: -85px; margin-top: -85px;">
+    <div class="th-hero-wrapper" style="height: 675px; padding-top: -185px; margin-top: -185px;">
         <div class="hero-inner">
-            <div class="th-hero-bg background-image" style="background-image: url(images/banner_intro.jpg);">
+            <div class="th-hero-bg background-image" style="background-image: url(images/banner_intro3.jpg);">
             </div>
             <div class="container th-container5">
                 <div class="hero-style5"><span class="sub-title style1 text-white">We’re Leading Software Training
                         Institute</span>
-                    <h1 class="hero-title text-white">Accelerate Your Career Growth & Upskill Yourself!</h1>
+                    <h1 class="hero-title text-xl-start text-theme text-white">Accelerate Your Career Growth & Upskill Yourself!</h1>
                     <div class="btn-group mt-35"><a href="angular.html" class="th-btn style6 style-radius">View
                             All Courses</a></div>
                 </div>
