--- a/index.html
+++ b/index.html
@@ -351,13 +351,13 @@
                                 </div>
                                 <div class="testi-grid_review"><i class="fa-solid fa-star-sharp"></i><i
                                         class="fa-solid fa-star-sharp"></i><i class="fa-solid fa-star-sharp"></i><i
-                                        class="fa-solid fa-star-sharp"></i><i class="fa-solid fa-star-sharp"></i></div>
+                                        class="fa-solid fa-star-sharp"></i></div>
                                 <div class="testi-grid_content">
                                     <p class="testi-grid_text">Best institute for knowledge. Teaching staff is
                                         outstanding. Build our confidence level, knowledge,smart work etc which requires
                                         for IT industry. One of the best institute I ever seen.<br /><br></p>
                                     <h3 class="box-title">Sagar Wankhade</h3>
-                                    <p class="testi-grid_desig">Autoation Test Engineer</p>
+                                    <p class="testi-grid_desig">Automation Test Engineer</p>
                                 </div>
                             </div>
                         </div>
@@ -390,7 +390,7 @@
                                 </div>
                                 <div class="testi-grid_review"><i class="fa-solid fa-star-sharp"></i><i
                                         class="fa-solid fa-star-sharp"></i><i class="fa-solid fa-star-sharp"></i><i
-                                        class="fa-solid fa-star-sharp"></i><i class="fa-solid fa-star-sharp"></i></div>
+                                        class="fa-solid fa-star-sharp"></i></div>
                                 <div class="testi-grid_content">
                                     <p class="testi-grid_text">This institute is so excellent…It will change your entire
                                         life Just you have to follow the sir, Sir will show you right direction. As the
